releases are sorted from youngest to oldest.

v-0.3.4 2013-9-11 zhangping
- channel reset bug, tail_addr initialize as 12
- configure save bug, main process will crash if save configure when channel restart
- pid input is unnecessary.

v-0.3.3 2013-8-20 zhangping
- enocer output heartbeat
- stop command line option
- remove noise log message
- avoid start more than one itvencoder
- reset channel on restart

v-0.3.2 2013-8-9 zhangping
- configure mistake cause start failure bugfix.
- one channel and enable is no, cause start failure bugfix.
- reset cache after channel restart.
- clean up log.
- restart policy.
- element property in bin cause caps ineffectual.

v-0.3.1 2013-7-31 zhangping
- channel run as seperate process.
- tools via http request, e.g. mediainfo.
- many bug fix.

v-0.3.0 2013-5-30 zhangping
- rewrite configure file parse.
- support multi audio track and multi subtitle tracks.
- support RESTFul compatible management interface.
- log cpu and memory usage.

v-0.2.2 2013-3-15 zhangping
- multiply streams support.
- restart channel or encoder async.
- log itvencoder cpu and memory usage

v-0.2.1 2013-2-25 zhangping
- pure pull mode encoder app src.
- FIN -> EPOLLIN bug fix.
- specify conf file in command line.
- seperate mgmt and streaming http port.
- kill itvencoder via http mgmt.

v-0.1.3 2012-12-20 zhangping
- bugfix.
- rpmbuild.
- autoconf and automake.
- gracefully close socket.
- daemonize.

v-0.1.2 2012-12-5 zhangping
- log to file, /var/log/itvencoder.log, and use logrotate.
- writev more data every time, avoid vlc exit.
- time output format, more readable.
- use events mutex, for crash bug.
- auto restart source pipeline or encoder pipeline.
- restart source and encoder pipeline via http interface.
- report request current status.
- access times.

v-0.1.1 2012-11-16 zhangping
- native http server.
- video deinterlace.
- channel monitor.
- get caps of decoder pipeline appsink and set caps of encoder pipeline appsrc.